@@ -2,6 +2,8 @@
 
   Version 5.0.4  2012-03-
   ------------------------------------------------------------------------------
+    - dirty volumes needing CHKDSK repair were returned
+      to the drives list with a special mark in their status field
     - taskbar icon overlay indicating that a job is running was added
       for Windows 7 and more recent Windows editions; it can be turned
       on/off by show_taskbar_icon_overlay GUI option
